--- a/mypage.css
+++ b/mypage.css
@@ -12,7 +12,7 @@ body {
     font-weight: normal;
     text-transform: uppercase;
     border-bottom: 1px solid #57b1dc;
-    morgin-top: 30px;
+    margin-top: 30px;
   }
   h2 {
     color: #d1633c;
@@ -77,8 +77,27 @@ color: rgb(0, 0, 0);
 .video{
   display: inline-flex;
 }
-.global-setup{
-  width: 500px;
-  display: inline-block;
-  flex-direction: row;
+.global-setup p{
+  background: #f2f5d5;
+  width: 300px;
+  height: 150px;
+  padding: 20px;
+  border: 5px solid gray;
+  margin: 20px;
+}
+.global-setup h2{
+  font: 2em sans-sarif;
+  color: #9b1b1b;
+}
+.normal{
+  width: 900px;
+}
+
+.p-video{
+  background: #f2f5d5;
+  width: 600px;
+  height: 200px;
+  padding: 20px;
+  border: 5px solid gray;
+  margin: 20px;
 }
