--- a/mypage.css
+++ b/mypage.css
@@ -77,6 +77,10 @@ color: rgb(0, 0, 0);
 .video{
   display: inline-flex;
 }
+.global-setup{
+  display: inline-flex;
+  flex-direction: row;
+}
 .global-setup p{
   background: #f2f5d5;
   width: 300px;
