--- a/mypage.css
+++ b/mypage.css
@@ -61,6 +61,8 @@ text-align: center;
 padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
+justify-content: center;
+margin: .5em;
 }
 
 /* Change the color of links on hover */
