--- a/mypage.css
+++ b/mypage.css
@@ -61,6 +61,7 @@ text-align: center;
 padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
+display: flex;
 justify-content: center;
 margin: .5em;
 }
