--- a/mypage.css
+++ b/mypage.css
@@ -61,7 +61,8 @@ nav ul{
 
 /* Style the links inside the navigation bar */
 nav ul li a {
-color: #f2f2f2;
+  background-color: #626362;
+color: #000000;
 text-align: center;
 padding: 14px 16px;
 text-decoration: none;
