Change in gaellery layout

--- a/mypage.css
+++ b/mypage.css
@@ -61,7 +61,7 @@ nav ul{
 
 /* Style the links inside the navigation bar */
 nav ul li a {
-  background-color: #626362;
+background-color: #909290;
 color: #000000;
 text-align: center;
 padding: 14px 16px;
@@ -89,8 +89,10 @@ color: rgb(0, 0, 0);
   display: inline-flex;
 }
 .global-setup{
-  display: inline-flex;
   flex-direction: row;
+  align-items: stretch;
+  flex-wrap: wrap;
+  
 }
 .global-setup p{
   background: #f2f5d5;
