--- a/mypage.css
+++ b/mypage.css
@@ -97,21 +97,10 @@ color: rgb(0, 0, 0);
   background: #F6F3ED;
   margin: 10px;
   padding: 20px;
-  border: 1px dotted maroon;
+  border: 1px dotted #970505;
   width: 240px;
 }
-.global-setup p{
-  background: #f2f5d5;
-  width: 300px;
-  height: 150px;
-  padding: 20px;
-  border: 5px solid gray;
-  margin: 20px;
-}
-.global-setup h2{
-  font: 2em sans-sarif;
-  color: #9b1b1b;
-}
+
 .normal{
   width: 900px;
 }
