--- a/mypage.css
+++ b/mypage.css
@@ -88,7 +88,7 @@ color: rgb(0, 0, 0);
 .video{
   display: inline-flex;
 }
-.how-to{
+#how-to{
   flex-direction: row;
   align-items: stretch;
   flex-wrap: wrap;
