--- a/mypage.css
+++ b/mypage.css
@@ -88,7 +88,7 @@ color: rgb(0, 0, 0);
 .video{
   display: inline-flex;
 }
-section.how-to{
+#how-to{
   display: flex;
   flex-direction: row;
   align-items: stretch;
