--- a/mypage.css
+++ b/mypage.css
@@ -114,3 +114,23 @@ color: rgb(0, 0, 0);
   border: 5px solid gray;
   margin: 20px;
 }
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
